# yoloyolo

./: Cargo.toml  LICENSE  README.md
fixtures/: Charlotte.txt  Straße.txt  hello.txt  schnell.txt
src/: lib.rs  spell_it.rs
