[package]
name = "yoloyolo"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
shuttle-service = { version = "0.6.0", features = ["web-axum"] }
axum = "0.5.16"
sync_wrapper = "0.1.1"
phf = { version = "0.11.1", features = ["macros"] }
unicode-segmentation = "1.10.0"
serde = { version = "1.0.145", features = ["derive"] }
